Bug 15798 - libnet4: seg fault after dc lookup failure
Summary: libnet4: seg fault after dc lookup failure
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Other (show other bugs)
Version: 4.22.0rc1
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL: https://gitlab.com/samba-team/samba/-...
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-07 13:58 UTC by Björn Baumbach
Modified: 2025-02-13 12:35 UTC (History)
1 user (show)

See Also:


Attachments
v4.22 fix cherry-picked from master (2.78 KB, patch)
2025-02-11 15:02 UTC, Björn Baumbach
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Baumbach 2025-02-07 13:58:55 UTC
Return value of finddcs_cldap_recv() is not checked in libnet_LookupDCs_recv() which leads to seg fault when the lookup fails.

Have patch, need bug number.
Comment 1 Samba QA Contact 2025-02-08 03:31:12 UTC
This bug was referenced in samba master:

c5511056708fb1be3c2e1b2ad61af6643f92051c
Comment 2 Samba QA Contact 2025-02-11 11:06:03 UTC
This bug was referenced in samba master:

8f72b5673e6a26c5a6a69dbc56e91027d0dabe37
Comment 3 Björn Baumbach 2025-02-11 15:02:14 UTC
Created attachment 18552 [details]
v4.22 fix cherry-picked from master
Comment 4 Jule Anger 2025-02-12 09:24:28 UTC
Pushed to autobuild-v4-22-test.
Comment 5 Samba QA Contact 2025-02-12 11:38:03 UTC
This bug was referenced in samba v4-22-test:

753c9bfdad987442b17e3877dbd3f8b384ce34e2
cd4a725154562237097f174f23a7f96a58adb989
Comment 6 Jule Anger 2025-02-12 13:09:08 UTC
Closing out bug report.

Thanks!
Comment 7 Samba QA Contact 2025-02-13 12:35:31 UTC
This bug was referenced in samba v4-22-stable (Release samba-4.22.0rc2):

753c9bfdad987442b17e3877dbd3f8b384ce34e2
cd4a725154562237097f174f23a7f96a58adb989