libnet4: check return value of DC lookup

Avoids possible segmentation fault when the lookup fails.

BUG: https://bugzilla.samba.org/show_bug.cgi?id=15798

Pair-programmed-with: Volker Lendecke <vl@samba.org>
Signed-off-by: Volker Lendecke <vl@samba.org>
Signed-off-by: Björn Baumbach <bb@sernet.de>
Reviewed-by: Douglas Bagnall <douglas.bagnall@catalyst.net.nz>

Autobuild-User(master): Douglas Bagnall <dbagnall@samba.org>
Autobuild-Date(master): Sat Feb  8 03:30:27 UTC 2025 on atb-devel-224

(cherry picked from commit c5511056708fb1be3c2e1b2ad61af6643f92051c)